--- a/Go/myMqtt/resources/templates/login.html
+++ b/Go/myMqtt/resources/templates/login.html
@@ -13,26 +13,53 @@
     <script src="http://localhost:8080/resources/static/js/jquery-3.3.1.min.js"></script>
     <script src="http://localhost:8080/resources/static/js/bootstrap.min.js"></script>
 </head>
-<body style="background-image: url(http://localhost:8080/resources/static/image/pier-1467984_1920.jpg)">
+<body>
 
-<div style="">
-    <form style="background-color: aliceblue; width: 20%">
+<div class="container">
+    <div class="row clearfix">
+        <div class="col-md-12 column">
+            <div id="navbar-header">
+                <a href="#">MyMQTT</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="login">
+    <form class="form-horizontal">
         <div class="form-group">
-            <label for="exampleInputEmail1">邮箱</label>
-            {{/*<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">*/}}
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="邮箱">
+            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            </div>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">密码</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="密码">
+            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            </div>
         </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> 记住密码
-            </label>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> Remember me
+                    </label>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-default">登录</button>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Sign in</button>
+            </div>
+        </div>
     </form>
+</div>
+
+<div id="foot">
+    <div id="z">
+        <h5>版权所有 <i class="fa fa-copyright"></i> 亿云物联科技有限公司 2017-2018。保留一切权利。鲁ICP备18001607号 </h5>
+    </div>
 </div>
 
 </body>
